# ConvoSumm

./: README.md
code/Argument-Graph-Mining-code/: Dockerfile  README.md  claims_premises.py  cluster.py  config-example.toml  config.toml  docker-compose.yml  ex.txt  flat_tree.py  load_graph2txt.py  match_targets.py  pyproject.toml  read.py  samsum.py
code/Argument-Graph-Mining-code/.devcontainer/: devcontainer.json  docker-compose.extend.yml
code/Argument-Graph-Mining-code/recap_am/: app.join_separate_graphs.py  app.separate_graphs.py  cli.py  evaluate.py  load_graph2txt.py  server.py
code/Argument-Graph-Mining-code/recap_am/adu/: .gitignore  classify.py  feature_select.py  grids.py  run_task.py  utilities.py
code/Argument-Graph-Mining-code/recap_am/adu/training/: train_adu.py  train_clpr.py
code/Argument-Graph-Mining-code/recap_am/controller/: count.py  extract_features.py  nlp.py  preprocess.py
code/Argument-Graph-Mining-code/recap_am/evaluation/: evaluator.py  similarity.py
code/Argument-Graph-Mining-code/recap_am/model/: color.py  config.py  query.py  statistic.py
code/Argument-Graph-Mining-code/recap_am/preprocessing/: graph_to_dataframe.ipynb  kialo.py  parser.ipynb  pipeline.ipynb  tfidf.ipynb
code/Argument-Graph-Mining-code/recap_am/relation/: construct_graph.py
code/Argument-Graph-Mining-code/recap_am/relation/controller/: adu_position.py  attack_support.py  flat_tree.py  mc_from_relations.py  pairwise_comparison.py
code/Argument-Graph-Mining-code/recap_am/static/: main.css
code/Argument-Graph-Mining-code/recap_am/templates/: index.html
(+32 files in other folders)
